--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.1.RELEASE'
+        springBootVersion = '4.2.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -30,6 +30,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-freemarker")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    compile group: 'com.google.guava', name: 'guava', version: '12.0'
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
