--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ management.context-path=/manage
 
 spring.data.mongodb.uri: mongodb://localhost/gerevet
 spring.data.mongodb.username=admin
-spring.data.mongodb.password[]=eEDcgkPwK5mf
+spring.data.mongodb.password=eEDcgkPwK5mf
