--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 management.context-path=/manage
 
-spring.data.mongodb.uri: mongodb://localhost/gerevet
-spring.data.mongodb.username=admin
+spring.data.mongodb.database=gerevet
+spring.data.mongodb.host=localhost
 spring.data.mongodb.password=eEDcgkPwK5mf
+spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.uri=mongodb://localhost/gerevet
+spring.data.mongodb.username=user
