fix mongodb connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 management.context-path=/manage
 
-spring.data.mongodb.database=gerevet
-spring.data.mongodb.host=127.4.180.130
 spring.data.mongodb.password=eEDcgkPwK5mf
-spring.data.mongodb.repositories.enabled=true
-#spring.data.mongodb.uri=mongodb://localhost/gerevet
+spring.data.mongodb.uri=mongodb://127.4.180.130:27017/gerevet
 spring.data.mongodb.username=user
-spring.data.mongodb.port=27017
