--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ management.context-path=/manage
 spring.data.mongodb.password=eEDcgkPwK5mf
 spring.data.mongodb.host=127.4.180.130
 spring.data.mongodb.uri=mongodb://127.4.180.130:27017/gerevet
-spring.data.mongodb.username=user
+spring.data.mongodb.username=admin
